--- a/app/views/simple_pages/thank_you.html.erb
+++ b/app/views/simple_pages/thank_you.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <h1>Thank you</h1>
-  <div class="success-message">
+  <div>
       <p>We have received your message and will respond as soon as possible.</p>
   </div>
 
