--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -114,6 +114,10 @@ a:hover {
   border-radius: 0;
 }
 
+.stripe-button-el {
+  margin-top: 10px;
+}
+
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary:focus-within,
