--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -33,6 +33,11 @@
       <strong>
         <%= @product.price %>€
       </strong>
+
+      <%= form_with(url: '/payments/create') do |form| %>
+        <%= render partial: "shared/stripe_checkout_button" %>
+      <% end %>
+      
     </div>
   </div>
 
