--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -31,13 +31,13 @@
       <p>Average Rating: <div class="rated" data-score="<%= @product.average_rating %>"></div> </p>
 
       <strong>
-        <%= @product.price %>€
+        <%= number_to_currency(@product.price, unit: "€", separator: ",", delimiter: "", format: "%n %u") %>
       </strong>
 
       <%= form_with(url: '/payments/create') do |form| %>
         <%= render partial: "shared/stripe_checkout_button" %>
       <% end %>
-      
+
     </div>
   </div>
 
