--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -35,6 +35,7 @@
       </strong>
 
       <%= form_with(url: '/payments/create') do |form| %>
+        <%= hidden_field_tag(:product_id, @product.id) %>
         <%= render partial: "shared/stripe_checkout_button" %>
       <% end %>
 
