--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -350,8 +350,8 @@ Product overview
   color: #182628;
 }
 
-.product_image {
-  margin-bottom: 25px;
+.list-content h2 {
+  margin-top: 25px;
 }
 
 .product_link {
