--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -13,7 +13,7 @@
     </div>
     <div class="col-md-5">
       <div class="product_detail_imagebox">
-      <%= render partial: "productimage", locals: {product: @product} %>
+      <%= render partial: "productimagedetail", locals: {product: @product} %>
       </div>
     </div>
     <div class="col-md-5">
