--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -1,6 +1,6 @@
 <% if signed_in? %>
+  <%= form_for([@product, @product.comments.build], remote: true) do |f| %>
   <h4>Add a review</h4>
-  <%= form_for([@product, @product.comments.build]) do |f| %>
     <div class="form-group">
       <%= f.label :body, "Rating" %>
       <div class="rating required">
@@ -8,7 +8,7 @@
     </div>
     <div class="form-group">
       <%= f.label :body, "Comments" %>
-      <%= f.text_area :body, class: "form-control comment-control", :required => true%>
+      <%= f.text_area :body, class: "form-control comment-control", :required => true %>
     </div>
     <div class="actions">
       <%= f.submit "Submit", class: "button btn-primary" %>
