--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -517,6 +517,14 @@ label {
   width: 100%;
 }
 
+.success {
+  background-color: #3b945e;
+  color: white;
+  border-radius: 0px;
+  border: none;
+  padding: 10px;
+}
+
 /***
 Media queries
 ***/
