--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,2 +1,3 @@
-$("#new_comment").html("Thank you for your review!</div>");
+$("#new_comment").html("Thank you for your review!");
+$("#new_comment").addClass("success");
 $('.product-reviews').prepend("<%= j render @comment %>");
