--- a/app/views/products/_new_comment.html.erb
+++ b/app/views/products/_new_comment.html.erb
@@ -12,6 +12,6 @@
     </div>
     <div class="actions">
       <%= f.submit "Submit", class: "button btn-primary" %>
-    <div>
+    </div>
   <% end %>
 <% end %>
