--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,6 +8,7 @@
     <div class="col-md-1">
     </div>
   </div>
+  <% cache @product do %>
   <div class="row product_detail">
     <div class="col-md-1">
     </div>
@@ -47,6 +48,7 @@
 
     </div>
   </div>
+  <% end %>
 
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
