--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,10 @@
 <div class="comment">
   <p>
-    <%= comment.user.first_name %>
+    <% if comment.user.first_name == nil %>
+      Anonym
+    <% else %>
+      <%= comment.user.first_name %>
+    <% end %>
     <em><small><%= "#{time_ago_in_words(comment.created_at)} ago" %></small></em>
     <% if signed_in? && current_user.admin? %>
       <%= link_to (' <span class="glyphicon glyphicon-remove"></span>').html_safe, product_comment_path(comment.product, comment), method: :delete, data: { confirm: 'Are you sure?' } %>
