--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,10 @@
 <div class="container-fluid">
   <h1>Products</h1>
   <div class="list">
-    <% @products.each do |product| %>
-      <%= render product %>
+    <% cache(cache_key_for_products) do %>
+      <% @products.each do |product| %>
+          <%= render product %>
+        <% end %>
     <% end %>
   </div>
   <div class="product_link">
