--- a/app/assets/javascripts/site.js.erb
+++ b/app/assets/javascripts/site.js.erb
@@ -5,6 +5,7 @@ var refreshRating = function() {
     starOn: '<%= asset_path 'star-on.png' %>',
     scoreName: 'comment[rating]'
   });
+  
     $('.rated').raty({
     starHalf: '<%= asset_path 'star-half.png' %>',
     starOff: '<%= asset_path 'star-off.png' %>',
@@ -16,7 +17,7 @@ var refreshRating = function() {
   });
 };
 
-$(document).on('turbolinks:load', function() {
+$(document).on('turbolinks:load ajaxSuccess', function() {
     refreshRating();
 
     $('.img-zoom').elevateZoom({
