--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -525,6 +525,15 @@ label {
   padding: 10px;
 }
 
+.alert-info {
+  background-color: #57ba98;;
+  color: white;
+  border-radius: 0px;
+  border: none;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
 /***
 Media queries
 ***/
