--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -53,6 +53,7 @@
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
       <h3>User Reviews</h3>
+        <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
         <%= render 'new_comment' %>
         <%= render 'comments' %>
         <%= will_paginate @comments %>
