--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -9,7 +9,7 @@
     </div>
   </div>
   <% cache @product do %>
-  <div class="row product_detail">
+  <div class="row product_detail" data-product-id="<%= @product.id %>">
     <div class="col-md-1">
     </div>
     <div class="col-md-5">
