--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,15 +24,48 @@
             "text": "#118cff"
           }
         },
-        "type": "opt-out",
+        "type": "opt-in",
         "content": {
           "message": "Wir verwenden Cookies, um Ihnen mehr Benutzerfreundlichkeit bieten zu können. Wenn Sie Zustimmen, akzeptieren Sie unsere Datenschutzerklärung.",
-          "dismiss": "ZUSTIMMEN",
-          "deny": "ABLEHNEN",
+          "dismiss": "ABLEHNEN",
+          "allow": "ZUSTIMMEN",
           "link": "Mehr Informationen",
           "href": "https://www.netzwerk-chancen.de/datenschutz",
         }
       })});
+    </script>
+    <script>
+    onInitialise: function (status) {
+      var type = this.options.type;
+      var didConsent = this.hasConsented();
+      if (type == 'opt-in' && didConsent) {
+        // enable cookies
+      }
+      if (type == 'opt-out' && !didConsent) {
+        // disable cookies
+      }
+    },
+
+    onStatusChange: function(status, chosenBefore) {
+      var type = this.options.type;
+      var didConsent = this.hasConsented();
+      if (type == 'opt-in' && didConsent) {
+        // enable cookies
+      }
+      if (type == 'opt-out' && !didConsent) {
+        // disable cookies
+      }
+    },
+
+    onRevokeChoice: function() {
+      var type = this.options.type;
+      if (type == 'opt-in') {
+        // disable cookies
+      }
+      if (type == 'opt-out') {
+        // enable cookies
+      }
+    },
     </script>
 
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
