--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -115,6 +115,8 @@ a:hover {
 }
 
 .stripe-button-el {
+  background-color: #3b945e;
+  border: none;
   margin-top: 10px;
 }
 
@@ -262,6 +264,7 @@ Homepage
 .carousel-inner > .item > img {
 margin:auto;
 padding: 25px;
+max-height: 250px;
 }
 
 .carousel-control.left,
@@ -469,7 +472,8 @@ label {
   border: none;
 }
 
-.login-form {
+.login-form,
+.contact-form {
   width: 340px;
   margin: 50px auto;
 }
@@ -554,6 +558,16 @@ Media queries
  .navbar .login {
    font-size: 0.9em;
  }
+
+ .carousel-inner > .item > img {
+ max-height: 500px;
+ }
+}
+
+@media (min-width: 767px) {
+  .carousel-inner > .item > img {
+  max-height: 400px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -578,7 +592,7 @@ Media queries
 Cookie Banner
 ***/
 
-.cc-window, .cc-revoke {
+.cc-window {
   font-family: 'Raleway', sans-serif;
   font-size: 16px; /* by setting the base font here, we can size the rest of the popup using CSS `em` */
   line-height: 1.5em;
@@ -589,11 +603,33 @@ Cookie Banner
 .cc-link {
   font-family: 'Raleway', sans-serif;
   color: white;
-  opacity: 100;
+  opacity: 1;
+}
+
+.cc-link:hover {
+  text-decoration: underline;
+}
+
+.cc-link:visited {
+  color: white;
 }
 
 .cc-btn {
   font-family: 'Raleway', sans-serif;
   background-color: white;
   color: #118cff;
+}
+
+.cc-btn:hover {
+  background-color: white;
+  color: #118cff;
+  text-decoration: none;
+}
+
+.cc-btn.cc-dismiss {
+  color: white;
+}
+
+.cc-highlight .cc-btn:first-child:focus, .cc-highlight .cc-btn:first-child:hover {
+  text-decoration: none;
 }
