--- a/app/views/shared/_stripe_checkout_button.html.erb
+++ b/app/views/shared/_stripe_checkout_button.html.erb
@@ -1,5 +1,6 @@
 <script
-  src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+  src="https://checkout.stripe.com/checkout.js"
+  class="stripe-button"
   data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
   data-name="<%= @product.name %>"
   data-description="<%= @product.description %>"
