--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,18 +1,20 @@
 <div class="container">
   <h1>Contact</h1>
   <%= form_with(url:"/simple_pages/thank_you", method: "post", local: true) do |form| %>
-  <div class="form-group">
-    <%= form.label :name %>
-    <%= form.text_field :name, class: "form-control"%>
-  </div>
-  <div class="form-group">
-    <%= form.label :email %>
-    <%= form.email_field :email, class: "form-control", :required => true%>
-  </div>
-  <div class="form-group">
-    <%= form.label :message %>
-    <%= form.text_area :message, class: "form-control", rows: 5 %>
-  </div>
-  <%= form.submit "Send", class: "btn btn-primary" %>
+    <div class="contact-form">
+      <div class="form-group">
+        <%= form.label :name %>
+        <%= form.text_field :name, class: "form-control"%>
+      </div>
+      <div class="form-group">
+        <%= form.label :email %>
+        <%= form.email_field :email, class: "form-control", :required => true%>
+      </div>
+      <div class="form-group">
+        <%= form.label :message %>
+        <%= form.text_area :message, class: "form-control", rows: 5 %>
+      </div>
+      <%= form.submit "Send", class: "btn btn-primary" %>
+    </div>
   <% end %>
 </div>
