Change look of image in jumbotron

--- a/app/assets/stylesheets/simple_pages.scss
+++ b/app/assets/stylesheets/simple_pages.scss
@@ -250,7 +250,7 @@ Homepage
 }
 
 .jumbotron-image {
-  width: 300px;
+  width: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
