--- a/app/views/simple_pages/landing_page.html.erb
+++ b/app/views/simple_pages/landing_page.html.erb
@@ -12,7 +12,12 @@
       <% @products.each do |product| %>
         <%= link_to(product) do %>
           <div class="item<%= " active" if product == @products.first %>">
-              <%= render partial: "products/productimage", locals: {product: product} %>
+              <%= if product.image_url.present?
+                image_tag(product.image_url, class: "img-responsive jumbotron-image")
+                else
+                image_tag('noproductimage.png', class: "img-responsive jumbotron-image")
+                end
+              %>
               <div class="carousel-caption">
                   <h2><%= product.name %></h2>
                 <% end %>
